--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -8,11 +8,52 @@ global:
             // Use preferred language label if available
             return (global.language && feature['name:'+global.language]) || feature.name;
         }
+    ux_language_text_source_short: |
+        function() {
+            // Use preferred language label if available
+            if(feature["name:short"]) {
+                return (global.language && feature['name:short:'+global.language]) || feature['name:short'];
+            } else {
+                return "";
+            }
+        }
+    ux_language_text_source_abbreviation: |
+        function() {
+            // Use preferred language label if available
+            return (global.language && feature['name:abbreviation:'+global.language]) || feature['name'];
+        }
+    ux_language_text_source_iata: |
+        function() {
+            // Use preferred language label if available
+            if(feature["name:iata"]) {
+                return (global.language && feature['name:'+global.language] + ' (' + feature['name:iata'] + ')' ) || (feature['name'] + ' (' + feature['name:iata'] + ')' );
+            } else {
+                return (global.language && feature['name:abbreviation:'+global.language]) || feature['name'];
+            }
+        }
     ux_language_text_source_ocean: |
         function() {
             // Use preferred language label if available
             return (global.language && feature['name:'+global.language].split('').join('  ')) || feature.name.split('').join('  ');
         }
+    ux_language_text_source_sea: |
+        function() {
+            // Use preferred language label if available
+            return (global.language && feature['name:'+global.language].split('').join(' ')) || feature.name.split('').join(' ');
+        }
+    ux_language_text_source_continent: |
+        function() {
+            // Use preferred language label if available
+            return (global.language && feature['name:'+global.language].split('').join(' ')) || feature.name.split('').join(' ');
+        }
+    ux_language_text_source_road_ref_and_name: |
+        function() {
+            // Use preferred language label if available
+            if(feature.ref) {
+                return (global.language && (feature.ref + " " + feature['name:'+global.language])) || (feature['name'] );
+            } else {
+                return (global.language && feature['name:'+global.language]) || (feature['name'] );
+            }
     feature_order: function() { return feature.sort_key; }
     #
     #label visibility
@@ -1337,7 +1378,7 @@ layers:
                         priority: 50
                         visible: global.text_visible_highway
                         #text_source: ref
-                        text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
+                        text_source: global.ux_language_text_source_road_ref_and_name
                         font:
                             fill: [0.0,0.0,0.0]
                             weight: 600
@@ -1351,7 +1392,7 @@ layers:
                         priority: 50
                         visible: global.text_visible_highway
                         #text_source: ref
-                        text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
+                        text_source: global.ux_language_text_source_road_ref_and_name
                         font:
                             fill: [0.0,0.0,0.0]
                             weight: 600
@@ -1452,7 +1493,7 @@ layers:
                             text-blend-order:
                                 priority: 53
                                 visible: global.text_visible_trunk_primary_e2
-                                text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
+                                text_source: global.ux_language_text_source_road_ref_and_name
                                 font:
                                     fill: [0.0,0.0,0.0]
                                     size: 13px
@@ -1463,7 +1504,7 @@ layers:
                             text-blend-order:
                                 priority: 53
                                 visible: global.text_visible_trunk_primary
-                                text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
+                                text_source: global.ux_language_text_source_road_ref_and_name
                                 font:
                                     fill: [0.0,0.0,0.0]
                                     weight: 600
@@ -1475,7 +1516,7 @@ layers:
                             text-blend-order:
                                 priority: 53
                                 visible: global.text_visible_trunk_primary
-                                text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
+                                text_source: global.ux_language_text_source_road_ref_and_name
                                 font:
                                     fill: [0.0,0.0,0.0]
                                     weight: 600
@@ -1546,7 +1587,7 @@ layers:
                         text-blend-order:
                             priority: 53
                             visible: global.text_visible_trunk_primary
-                            text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
+                            text_source: global.ux_language_text_source_road_ref_and_name
                             font:
                                 fill: [0.0,0.0,0.0]
                                 size: 15px
@@ -1557,7 +1598,7 @@ layers:
                         text-blend-order:
                             priority: 53
                             visible: global.text_visible_trunk_primary
-                            text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
+                            text_source: global.ux_language_text_source_road_ref_and_name
                             font:
                                 fill: [0.0,0.0,0.0]
                                 size: 16px
@@ -1568,7 +1609,7 @@ layers:
                         text-blend-order:
                             priority: 53
                             visible: global.text_visible_trunk_primary
-                            text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
+                            text_source: global.ux_language_text_source_road_ref_and_name
                             font:
                                 fill: [0.0,0.0,0.0]
                                 size: 17px
@@ -1737,7 +1778,7 @@ layers:
                             priority: 54
                             visible: global.text_visible_secondary
                             #text_source: ref
-                            text_source: function() { if( feature.ref && feature.name ) { return feature.ref + " " + feature.name; } else { return feature.name; } }
+                            text_source: global.ux_language_text_source_road_ref_and_name
                             font:
                                 # need a fill color here?
                                 fill: [0.15,0.15,0.15]
@@ -2805,7 +2846,7 @@ layers:
                 text-blend-order:
                     priority: 3
                     visible: global.text_visible_admin
-                    text_source: function() { return feature["name:en"] || feature["name"]; }
+                    text_source: global.ux_language_text_source
                     font:
                         fill: [0.30,0.30,0.30]
                         weight: 400
@@ -2817,7 +2858,7 @@ layers:
                 text-blend-order:
                     priority: 3
                     visible: global.text_visible_admin
-                    text_source: function() { return feature["name:en"] || feature["name"]; }
+                    text_source: global.ux_language_text_source
                     font:
                         fill: [0.20,0.20,0.20]
                         size: 11px
@@ -2840,7 +2881,7 @@ layers:
                 text-blend-order:
                     priority: 3
                     visible: global.text_visible_admin
-                    text_source: function() { return feature["name:en"] || feature["name"]; }
+                    text_source: global.ux_language_text_source
                     font:
                         size: 12px
                         weight: 600
@@ -2869,7 +2910,7 @@ layers:
                 text-blend-order:
                     priority: 3
                     visible: global.text_visible_admin
-                    text_source: function() { return feature["name:en"] || feature["name"]; }
+                    text_source: global.ux_language_text_source
                     font:
                         size: 13px
                         weight: 400
@@ -2892,7 +2933,7 @@ layers:
                 text-blend-order:
                     priority: 3
                     visible: global.text_visible_admin
-                    text_source: function() { return feature["name:en"] || feature["name"]; }
+                    text_source: global.ux_language_text_source
                     font:
                         size: 14px
                         weight: 600
@@ -2911,7 +2952,7 @@ layers:
                 text-blend-order:
                     priority: 3
                     visible: global.text_visible_admin
-                    text_source: function() { return feature["name:en"] || feature["name"]; }
+                    text_source: global.ux_language_text_source
                     font:
                         size: 16px
                         weight: 600
@@ -2966,7 +3007,7 @@ layers:
                 text-blend-order:
                     priority: 14
                     visible: global.text_visible_admin
-                    text_source: function() { if(feature["name:short"]) { return feature["name"]; } else { return ""; } }
+                    text_source: global.ux_language_text_source_short
                     font:
                         size: 14px
                         weight: 300
@@ -2986,7 +3027,7 @@ layers:
                 filter: { name: ["Delaware","New Jersey","Connecticut","Rhode Island","Massachusetts","New Hampshire","Vermont"], $zoom: {min: 7, max: 8} }
                 draw:
                     text-blend-order:
-                        text_source: function() { return feature["name:abbreviation"] || feature["name"]; }
+                        text_source: global.ux_language_text_source_abbreviation
                         font: { transform: uppercase }
 
         populated-places:
@@ -4802,7 +4843,7 @@ layers:
                         text:
                             visible: global.text_visible_landuse_green
                             priority: 41
-                            text_source: function() { if(feature.iata) { return feature.name + ' (' + feature.iata + ')'; } else { return feature.name; } }
+                            text_source: global.ux_language_text_source_iata
                             font:
                                 fill: [0.20,0.20,0.20] # *text_fill
                                 #size: 11px
@@ -5721,6 +5762,10 @@ layers:
                 trailhead:
                     filter: { kind: [trailhead, hiking_trail] }
                     draw:   { icons: { sprite: trailhead } }
+                # because: JAPAN
+                traffic-signal:
+                    filter: { kind: traffic_signals }
+                    draw:   { icons: { sprite: traffic-signal } }
                 veterinarian:
                     filter: { kind: [pet_care, veterinarian, veterinary] }
                     draw:   { icons: { sprite: veterinarian } }
@@ -5851,7 +5896,7 @@ layers:
             filter: { not: { kind: [ocean] }, $zoom: { min: 5 } }
             draw:
                 text-blend-order:
-                    text_source: function() { return feature.name.split('').join(' ') }
+                    text_source: global.ux_language_text_source_sea
                     text_wrap: false
 
         sea-labels:
@@ -5937,7 +5982,7 @@ layers:
                 filter: { $zoom: { min: 1, max: 5 } }
                 draw:
                     text-blend-order:
-                        text_source: function() { return feature.name.split('').join(' ') }
+                        text_source: global.ux_language_text_source_continent
                         text_wrap: false
         island:
             filter: { kind: [archipelago, island, islet] }
